# TRNspot_simple

./: .gitignore  CHANGELOG.md  CONTROLLER_IMPLEMENTATION.md  LOGGING_SYSTEM.md  MANIFEST.in  PARALLEL_PROCESSING_FIX.md  README.md  grn_analysis.py  pyproject.toml  run_complete_analysis.py  run_pipe_regev_test.sh  setup.py  verify_controller.py
.github/: copilot-instructions.md
docs/: CELLORACLE_MODULE_SUMMARY.md  CELLORACLE_PROCESSING.md  CELLORACLE_QUICK_REF.md  COMPLETE_PIPELINE_GUIDE.md  CONFIG.md  CONTROLLER_QUICK_REF.md  PACKAGE_STRUCTURE.md  PIPELINE_CONTROLLER_GUIDE.md  PREPROCESSING_CONFIG_UPDATE.md  QC_FUNCTIONS.md
examples/: celloracle_workflow.py  complete_pipeline.py  config_example.py  controller_usage_examples.py  example_qc.py  hotspot_workflow.py  preprocess_workflow.py  quick_demo.py  test_config_integration.py
otto_skmel28/logs/: plot_registry.json
output/: analysis_config.json
tests/: __init__.py  test_celloracle.py  test_config.py  test_preprocessing.py
trnspot/: __init__.py  celloracle_processing.py  config.py  enrichment_analysis.py  grn_analysis.py  grn_deep_analysis.py  hotspot_processing.py  preprocessing.py
trnspot/execution/: __init__.py  celloracle.py  hotspot.py  preprocessing.py
trnspot/plotting/: __init__.py  embeddings.py  grn.py  grn_plots.py  hotspot.py  hotspot_plots.py  qc.py  qc_plots.py  utils.py
trnspot/reporting/: __init__.py  generator.py  sections.py
trnspot/utils/: __init__.py  data.py  io.py  logging.py
